# MAAP-STAC-auth

./: .env  .pre-commit-config.yaml  README.md  app.py  config.py  package-lock.json  pyproject.toml  requirements.txt
infra/: AuthStack.py  RolesStack.py  stack.py
scripts/: service-auth-example.py
