[project]
name = "maap-stac-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-aws-cognito-identitypool-alpha==2.35.0a0",
    "aws-cdk-lib==2.168.0",
    "boto3==1.24.15",
    "boto3-stubs[cognito-identity,cognito-idp]>=1.37.4",
    "click==8.1.3",
    "constructs>=10.0.0,<11.0.0",
    "flake8==4.0.1",
    "pydantic==1.9.1",
    "python-dotenv==1.0.0",
    "requests==2.28.0",
]

[dependency-groups]
dev = [
    "mypy==1.15.0",
    "pre-commit>=4.1.0",
    "ruff>=0.9.9",
]

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
show_error_codes = true

[tool.ruff]
lint.select = ["E", "F", "I"]

[tool.ruff.isort]
combine-as-imports = true
